Bug 304467 - kio_thumbnail keeps running after exiting dolphin
Summary: kio_thumbnail keeps running after exiting dolphin
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 2.1
Platform: Ubuntu Linux
: NOR critical
Target Milestone: ---
Assignee: Frank Reininghaus
URL:
Keywords: investigated
: 183832 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-02 19:57 UTC by Benni Hill
Modified: 2012-08-06 00:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments
stop thumbnail jobs (534 bytes, patch)
2012-08-03 19:49 UTC, Benni Hill
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Benni Hill 2012-08-02 19:57:39 UTC
When thumbnailing a folder for which dolphin hasn't created thumbnails yet, kio_thumbnail keeps running after exiting dolphin. This is at least an annoying behaviour since this blocks unmounting of flash drives, etc.

I marked this as critical since it might be possible that the user won't notice that unmounting had failed and therefore he would remove his external device (-> data loss?). 

Reproducible: Always

Steps to Reproduce:
1. Open a folder for which dolphin has not created thumbnails yet.
2. When dolphin starts to thumbnail the images, hit control+q or similar to exit it
3. main window disappears
Actual Results:  
A dolphin and a kio_thumbnail process keep running and thumbnailing all the images in the queue.

Expected Results:  
Dolphin should have exited immediately.

Might this be related to the gwenview bug 302074? (I guess not.)
Comment 1 Frank Reininghaus 2012-08-03 06:17:40 UTC
Thanks for the bug report! This looks similar to bug 183832.

Why do you think that this is unrelated to the Gwenview bug? I would guess that the root cause is quite similar and that it can be fixed in a similar way. If you could provide a patch, that would be awesome :-)
Comment 2 Benni Hill 2012-08-03 19:49:12 UTC
Created attachment 72936 [details]
stop thumbnail jobs

> Why do you think that this is unrelated to the Gwenview bug?
Only because gwenview doesn't use kio_thumbnail for image files.

I had a quick look into the code and my first try seems to solve this. But more testing is needed.
Comment 3 Frank Reininghaus 2012-08-04 07:13:39 UTC
Thanks for the patch! Looks very good from my point of view, and works nicely here. Do you have a git account, or shall I push it to master and 4.9 for you?
Comment 4 Benni Hill 2012-08-05 19:06:50 UTC
Ah, great.
I don't have an account, so please push it. thanks!
Comment 5 Frank Reininghaus 2012-08-06 00:31:24 UTC
Git commit 4d39dbc9620cd30826bfab4a42cf31702aeac6d8 by Frank Reininghaus.
Committed on 06/08/2012 at 02:21.
Pushed by freininghaus into branch 'KDE/4.9'.

Stop preview jobs when closing Dolphin

Patch by Benni Hill. Thanks for the patch!
FIXED-IN: 4.9.1

M  +1    -0    dolphin/src/kitemviews/kfileitemmodelrolesupdater.cpp

http://commits.kde.org/kde-baseapps/4d39dbc9620cd30826bfab4a42cf31702aeac6d8
Comment 6 Frank Reininghaus 2012-08-06 00:36:23 UTC
Git commit f0d2d6d752b478e1b1f9ebe4bdc3ca03fbe6691b by Frank Reininghaus.
Committed on 06/08/2012 at 02:21.
Pushed by freininghaus into branch 'master'.

Stop preview jobs when closing Dolphin

Patch by Benni Hill. Thanks for the patch!
(cherry picked from commit 4d39dbc9620cd30826bfab4a42cf31702aeac6d8)

M  +1    -0    dolphin/src/kitemviews/kfileitemmodelrolesupdater.cpp

http://commits.kde.org/kde-baseapps/f0d2d6d752b478e1b1f9ebe4bdc3ca03fbe6691b
Comment 7 Frank Reininghaus 2012-08-06 00:37:08 UTC
*** Bug 183832 has been marked as a duplicate of this bug. ***