Stop preview jobs when closing Dolphin

Patch by Benni Hill. Thanks for the patch!
BUG: 304467
FIXED-IN: 4.9.1